fixed views and added toasts for validation

--- a/contact/templates/contact.html
+++ b/contact/templates/contact.html
@@ -24,13 +24,13 @@
     <div class="row">
         <div class="col">
       <label for="exampleFormControlInput1">Email address</label>
-      <input type="email" name="contact_email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+      <input type="email" name="contact_email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com*" required>
       </div>
     </div>
         <div class="row">
           <div class="col">
             <label for="fname">First Name</label>
-            <input type="text" name="first_name" class="form-control" id="fname" placeholder="First name">
+            <input type="text" name="first_name" class="form-control" id="fname" placeholder="First name*" required>
           </div>
           <div class="col">
             <label for="sname">Surname</label>
@@ -40,7 +40,7 @@
     <div class="row">
         <div class="col">
       <label for="exampleFormControlTextarea1">Your Message</label>
-      <textarea class="form-control" name="subject" id="exampleFormControlTextarea1" placeholder="Write your message to EXECUStore here" rows="8"></textarea>
+      <textarea class="form-control" name="subject" id="exampleFormControlTextarea1" placeholder="Write your message to EXECUStore here" rows="8" required></textarea>
     </div>
     </div>
     <div class="row button-row mt-1">
