added links to base.html for contact

--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -14,8 +14,8 @@
 {% endblock %}
 
 {% block content %}
-    <div class="overlay backcolor"></div>
-    <div class="container mb-2">
+    <div class="overlay"></div>
+    <div class="container mb-2 display">
         <div class="row">
             <div class="col ">
                 
