contact form html created

--- a/contact/templates/contact.html
+++ b/contact/templates/contact.html
@@ -23,23 +23,23 @@
     {% csrf_token %}
     <div class="row">
         <div class="col">
-      <label for="exampleFormControlInput1">Email address</label>
+      <label for="exampleFormControlInput1" class="text-color">Email address</label>
       <input type="email" name="contact_email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com*" required>
       </div>
     </div>
         <div class="row">
           <div class="col">
-            <label for="fname">First Name</label>
+            <label for="fname" class="text-color">First Name</label>
             <input type="text" name="first_name" class="form-control" id="fname" placeholder="First name*" required>
           </div>
           <div class="col">
-            <label for="sname">Surname</label>
+            <label for="sname" class="text-color">Surname</label>
             <input type="text" name="second_name" class="form-control" id="sname" placeholder="Surname">
           </div>
         </div>
     <div class="row">
         <div class="col">
-      <label for="exampleFormControlTextarea1">Your Message</label>
+      <label for="exampleFormControlTextarea1" class="text-color">Your Message</label>
       <textarea class="form-control" name="subject" id="exampleFormControlTextarea1" placeholder="Write your message to EXECUStore here" rows="8" required></textarea>
     </div>
     </div>
